--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,15 +1,23 @@
-<h1>Cocktails#new</h1>
-<p>Find me in app/views/cocktails/new.html.erb</p>
+
 
 
 <%= simple_form_for [@cocktail] do |f| %>
 
-  <div class="card">
-    <div class="card-description">
-      <p><%= f.input :name %></p>
-      <div class="edit-button">
-        <button class="btn  btn-outline-success btn-sm">Add!</button>
+
+
+    <div class="container">
+
+      <div class="row">
+        <div class="col-xs-12 col-sm-6 col-sm-offset-4">
+          <div class="form-card">
+             <h3>Adicione aqui seu cocktail! Seja Criativo!</h3>
+            <p><%= f.input :name %></p>
+            <div class="form-button">
+            <button class="btn  btn btn-primary btn-sm">Add!</button>
+             </div>
+          </div>
+        </div>
       </div>
-    </div>
-  </div
+   </div>
+
 <% end %>
